@@ -1,27 +1,30 @@
-
 plugins {
     id 'application'
-    id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.23'
+    id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.25'
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(21)
+  }
+}
 
 // tag::repositories[]
 repositories {
     mavenLocal()
     mavenCentral()
     maven {
-        url 'https://jitpack.io'
+        name = "AzureArtifacts"
+        url = uri("https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1")
     }
 }
 // end::repositories[]
 
 // tag::dependencies[]
 dependencies {
-    testCompile group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.0.0'
-    testCompile group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.11'
-    testCompile 'com.github.hmcts:fortify-client:1.3.0:all'
+    testImplementation group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.25.4'
+    testImplementation group: 'com.github.hmcts', name: 'befta-fw', version: '9.2.4'
+    testImplementation 'com.github.hmcts:fortify-client:1.4.9:all'
 }
 // end::dependencies[]
 
@@ -39,27 +42,27 @@ sourceSets {
 }
 
 configurations {
-    aatCompile.extendsFrom(testCompile)
+    aatImplementation.extendsFrom(testImplementation)
     cucumberRuntime.extendsFrom(functionalRuntime)
 }
 
-task fortifyScan(type: JavaExec)  {
-    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+tasks.register('fortifyScan', JavaExec)  {
+    mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
     classpath += sourceSets.test.runtimeClasspath
     jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
     // The line below prevents the build from failing
     // if the Fortify scan detects issues
-    ignoreExitValue = true
+   // ignoreExitValue = true     **No longer required as fortify scan is enabled now
 }
 
-task highLevelDataSetup(type: JavaExec) {
-    main = "uk.gov.hmcts.ccd.caseactivity.befta.HighLevelDataSetupApp"
+tasks.register('highLevelDataSetup', JavaExec) {
+    mainClass = "uk.gov.hmcts.ccd.caseactivity.befta.HighLevelDataSetupApp"
     classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath
     jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 
-task smoke(type: Test) {
+tasks.register('smoke', Test) {
   description = 'Executes smoke tests against an the CCD Case Activity API instance just deployed'
   setTestClassesDirs(sourceSets.aat.output.classesDirs)
 
@@ -68,6 +71,7 @@ task smoke(type: Test) {
     javaexec {
       main = "uk.gov.hmcts.ccd.caseactivity.befta.CaseActivityBeftaMain"
       classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+      jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
       args = ['--plugin', "json:${rootDir}/target/cucumber.json", '--tags', '@Smoke', '--glue',
               'uk.gov.hmcts.befta.player', 'src/resources/features']
     }
@@ -85,7 +89,7 @@ task smoke(type: Test) {
   outputs.upToDateWhen { false }
 }
 
-task functional(type: Test) {
+tasks.register('functional', Test) {
   description = 'Executes functional tests against an the CCD Case Activity API instance just deployed'
   setTestClassesDirs(sourceSets.aat.output.classesDirs)
 
@@ -94,6 +98,7 @@ task functional(type: Test) {
     javaexec {
       main = "uk.gov.hmcts.ccd.caseactivity.befta.CaseActivityBeftaMain"
       classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+      jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
       args = ['--plugin', "json:${rootDir}/target/cucumber.json", '--tags', 'not @Ignore', '--glue',
               'uk.gov.hmcts.befta.player', 'src/resources/features']
     }
